[tool.poetry]
name = "openrelik-common"
version = "0.1.0"
description = "Common utilities for OpenRelik"
authors = [
    "hacktobeer <ramsesdebeer@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
python = "^3.11"
pytest = "*"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
pdoc3 = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"