[project]
name = "openrelik-common"
version = "0.7.9"
description = "Common utilities for OpenRelik"
authors = [{name = "hacktobeer", email = "ramsesdebeer@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11,<0.116.0",
    "opentelemetry-exporter-gcp-trace==1.11.0",
    "opentelemetry-exporter-otlp==1.32.1",
    "opentelemetry-instrumentation-celery>=0.53b1,<0.54.0",
    "opentelemetry-instrumentation-fastapi>=0.53b1,<0.54.0",
    "structlog>=25.4.0,<26.0.0",
    "billiard>=4.2.1,<5.0.0",
    "celery>=5.5.3,<6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<10.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-structlog>=1.1,<2.0.0",
    "freezegun>=1.5.3,<2.0.0",
]
docs = [
    "pdoc3>=0.11.6,<0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
